massolit/dist/linux/libwoland.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package github.com/stregato/master/woland */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 3 "exports.go"

typedef struct Result{
    char* res;
	char* err;
} Result;

typedef struct App {
	void (*feed)(char* name, char* data, int eof);
} App;

typedef struct Reader {
	void* fd;
	int (*read)(void* fd, void* data, int size);
	int (*seek)(void* fd, int offset, int whence);
	int (*write)(void* fd, void* data, int size);
} Reader;

int callRead(Reader* r, void* data, int size) {
	return r->read(r->fd, data, size);
}
int callSeek(Reader *r, int offset, int whence) {
	return r->seek(r->fd, offset, whence);
}

typedef struct Writer {
	void* fd;
	int (*write)(void* fd, void* data, int size);
} Writer;

int callWrite(Writer *w, void* data, int size) {
	return w->write(w->fd, data, size);
}

#include <stdlib.h>


#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif

extern Result start(char* dbPath, char* appPath);
extern Result stop();
extern Result factoryReset();
extern Result getConfig(char* node, char* key);
extern Result setConfig(char* node, char* key, char* value);
extern Result newIdentity(char* nick);
extern Result setIdentity(char* identity);
extern Result getIdentity(char* id);
extern Result encodeToken(char* userId, char* portalName, char* aesKey, char* urls);
extern Result decodeToken(char* identity, char* token);
extern Result openPortal(char* identity, char* token, char* openOptions);
extern Result closePortal(char* portalName);
extern Result getIdentities(char* portalName);
extern Result listFiles(char* portalName, char* zoneName, char* listOptions);
extern Result listSubFolders(char* portalName, char* zoneName, char* folder);
extern Result putData(char* portalName, char* zoneName, char* name, Reader* r, char* putOptions);
extern Result putCString(char* portalName, char* zoneName, char* name, char* data, char* putOptions);
extern Result putFile(char* portalName, char* zoneName, char* name, char* sourceFile, char* putOptions);
extern Result getData(char* portalName, char* zoneName, char* name, Writer* w, char* getOptions);
extern Result getCString(char* portalName, char* zoneName, char* name, char* getOptions);
extern Result getFile(char* portalName, char* zoneName, char* name, char* destFile, char* getOptions);
extern Result createZone(char* portalName, char* zoneName, char* users);
extern Result listZones(char* portalName);
extern Result setUsers(char* portalName, char* zoneName, char* users);
extern Result getUsers(char* portalName, char* zoneName);
extern Result getLogs();
extern Result setLogLevel(int level);

#ifdef __cplusplus
}
#endif